--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,10 @@ cargo = "0.15"
 rustc-serialize = "0.3"
 itertools = "0.5"
 clap = "2.31.2"
+
+[features]
+test0 = []
+test1 = []
+test2 = []
+test3 = []
+test4 = []
